--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <link rel="stylesheet" href="/css/reposive.css">
+        <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ysabeau">
         <style>
             body {
@@ -75,13 +75,8 @@
 
     </main>
     <footer>
-        <h2>contactos</h2>
-        <ul>
-            <li><a>correo</a></li>
-            <li><a>gibhup</a></li>
-            <li><a>linkedin</a></li>
-        </ul>
-
+        <h2>CODIGO PA' LANTE</h2>
+        
     </footer>
     
 </body>
