4t0 cambio realizado, iconos y lisnks

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             </div>
 
             <nav>
-                    <a>sobre mi</a>
-                    <a>contactos</a>
+                    <a id="nav-mi" href="#link-me">sobre mi</a>
+                    <a id="nav-contact"  href="#ico-mail">contactos</a>
             </nav>
         </div>
     </header>
@@ -32,7 +32,7 @@
         <div class="img-container">
             <img id="foto"    src="img/angeltrl.png" alt="angel tovar" title="angeltrl">
         </div>
-        <h1>bienvenidos al Portfolio de<br> Angel Tovar</h1>
+        <h1 id="title">bienvenidos al Portfolio de<br> Angel Tovar</h1><br><br>
         <p>hola, mi nombre es angel tovar y esta es mi presentacion para el proyecto de codigo pa'lante.
             en primera instancia soy fanatico de las computadoras y todo lo que tiene que ver con tecnologia,
             arme mi primer computador a los 16 y de alli 
@@ -42,7 +42,7 @@
             motivos de presupuestos tuve que optar por graduarme en el sistema de salida intermedia 
             obteniendo el titulo de Tecnico Superior en Informatica, en aquellos años a pesar que tenia madera
             para la programacion, por temas de ambito de trabajo me decante por trabajar con redes a nivel 
-            de enlaces locales y amplios, hice cursos de CCNA cisco y otras cosas, obtuve un puesto 
+            de enlaces locales y amplios, hice cursos de <a id="link-me"></a>CCNA cisco y otras cosas, obtuve un puesto 
             en PDVSA como analista de Mantenimiento a La Plataforma, luego por temas de la situacion del pais
             me vine a argentina donde no pude seguir desarrollandome como profesional por el tema de la edad, 
             me vine de 36 anios y luego de sacar mi documentacion argentina de residente permanente ya contaba
@@ -67,15 +67,15 @@
         </p>    
     </section>
     <section class ="iconos">
-        <img src="img/mail.png" alt="mail to:" title="correo" >
-        <img src="img/github.png" alt="github" title="github">
-        <img src="img/linkedin.png" alt="linkedin" title="linkedin">
+        <a href="mailto:angeltrl2000@gmail.com"><img id="ico-mail"  src="img/mail.png" alt="mail to:" title="correo" ></a>
+        <a href="https://github.com/angeltrl/proyecto1cpl"><img id="ico-git"  src="img/github.png" alt="github" title="github"></a>
+        <a href="https://www.linkedin.com/in/angel-jos%C3%A9-tovar-landaeta-18069a128/"><img id="ico-link"  src="img/linkedin.png" alt="linkedin" title="linkedin"></a>
     </section>
 
 
     </main>
     <footer>
-        <h2>CODIGO PA' LANTE</h2>
+        <h2 id="foot-text">CODIGO PA' LANTE</h2>
         
     </footer>
     
